--- a/doc/lispref/os.texi
+++ b/doc/lispref/os.texi
@@ -1199,7 +1199,7 @@ Similarly, the fourth list element @var{picosec}, if present, gives
 the number of picoseconds from the start of that microsecond to the
 specified time.
 
-  The return value of @code{current-time} represents time using three
+  The return value of @code{current-time} represents time using four
 integers, as do the timestamps in the return value of
 @code{file-attributes} (@pxref{Definition of
 file-attributes}).  In function arguments, e.g.@: the @var{time-value}
