Document some Emacs 24.3 changes.
* doc/emacs/dired.texi (Dired Deletion, Marks vs Flags): Document Emacs 24.3
changes to the mark and unmark commands.
(Comparison in Dired): Document chages to dired-diff.  Remove M-=,
which is no longer bound to dired-backup-diff.

* doc/emacs/mule.texi (Text Coding): set-buffer-file-coding-system can now
be invoked from the mode line.

* lisp/dired.el (dired-mark, dired-unmark, dired-flag-file-deletion):
Doc fix.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-10-24  Chong Yidong  <cyd@gnu.org>
 
+	* dired.el (dired-mark, dired-unmark, dired-flag-file-deletion):
+	Doc fix.
+
 	* emacs-lisp/easymenu.el (easy-menu-define): Doc fix (Bug#12628).
 
 2012-10-24  Stefan Monnier  <monnier@iro.umontreal.ca>
