--- a/lisp/org/ChangeLog
+++ b/lisp/org/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-24  Jambunathan K  <kjambunathan@gmail.com>
+
+	* org-lparse.el: Move some hooks from org-lparse to org-do-lparse
+	(Bug#12718).
+
 2012-09-30  Abdó Roig-Maranges  <abdo.roig@gmail.com>
 
 	* org-html.el (org-export-html-preprocess)
