--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-24  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (install-man): Don't apply transform to suffix.
+
 2012-10-23  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* configure.ac (_FORTIFY_SOURCE): Do not multiply define (Bug#12714).
