--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,5 +1,10 @@
 2012-10-24  Glenn Morris  <rgm@gnu.org>
 
+	* cl.texi (Overview, Multiple Values, Creating Symbols)
+	(Numerical Functions): Say less/nothing about the original cl.el.
+	(Old CL Compatibility): Remove.
+	(Assertions): Remove ignore-errors (standard Elisp for some time).
+
 	* cl.texi (Basic Setf, Macros, Declarations, Symbols, Numbers)
 	(Sequences, Lists, Structures, Assertions, Efficiency Concerns)
 	(Efficiency Concerns, Efficiency Concerns)
